<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/whole_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sandy.e3646.lifeblabla.mainactivity.MainActivity">


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_jot"
        android:minHeight="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/draw_image"
            android:layout_width="match_parent"
            android:layout_height="266dp"
            android:background="#80FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView17" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="match_parent"
            android:layout_height="1000dp"
            android:background="#50FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView17" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="#783b3b3b"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:background="#783b3b3b"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:text="手寫"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="@+id/imageView6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView6"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="55dp"
            android:layout_height="28dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            android:text="取消"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_complete"
            android:layout_width="55dp"
            android:layout_height="28dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            android:text="完成"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="@+id/imageView6"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/imageView6"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/jot_createdtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="2018/10/01"
            android:textColor="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="@+id/imageView17"
            app:layout_constraintStart_toStartOf="@+id/imageView17"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:background="#50FFFFFF"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Jot_photo" />

        <ImageView
            android:id="@+id/Jot_photo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView17"
            app:srcCompat="@drawable/image_sample_3" />

        <ImageView
            android:id="@+id/tag_bottom"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:background="#50FFFFFF"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="658dp" />

        <!--<android.support.design.widget.BottomNavigationView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="43dp"-->
        <!--android:background="#3B3B3B"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.0"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:menu="@menu/bottom_navigation_edit"/>-->

        <EditText
            android:id="@+id/jot_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:gravity="top|left"
            android:hint="還沒想到要寫什麼..."
            android:inputType="text|textMultiLine"
            android:maxHeight="400dp"
            android:minHeight="200dp"
            android:singleLine="false"
            android:textColor="@android:color/background_light"
            android:textColorHint="#96ffffff"
            app:layout_constraintEnd_toEndOf="@+id/imageView19"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/draw_image" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/jot_tag_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:background="#50000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent">

            </android.support.v7.widget.RecyclerView>
        </android.support.constraint.ConstraintLayout>


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>