...
            android:hint="搜尋筆記"
            android:inputType="text"
            android:textColor="@android:color/background_light"
            android:textColorHint="#96ffffff"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_add_notes"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
...
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/main_activity_container"-->
    <!--app:srcCompat="@drawable/edit" />-->


    <ToggleButton
        android:id="@+id/button_switch_layout"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:background="#00ffffff"
        android:button="@drawable/button_grid_layout"
        android:scaleType="centerCrop"
...
