...
        <ImageButton
            android:id="@+id/button_form_album"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/button_form_text"
            app:layout_constraintStart_toEndOf="@+id/button_form_text"
            app:layout_constraintTop_toTopOf="@+id/button_form_text"
            app:srcCompat="@drawable/background_tag" />

        <ImageButton
            android:id="@+id/button_form_text"
...
